Build and Buttons Component

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-  
+    <button type="button" class="btn btn--outline btn--block">
+      Get Started
+    </button>
+    <a href="" class="btn btn--accent btn--block">Buy Now</a>
   </body>
 </html>
