--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <button type="button" class="btn btn--outline btn--block">
-      Get Started
-    </button>
-    <a href="" class="btn btn--accent btn--block">Buy Now</a>
+    <input type="text" class="input" placeholder="Enter domain name here..." />
   </body>
 </html>
