--- a/index.html
+++ b/index.html
@@ -14,6 +14,446 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header>
+      <nav class="nav collapsible">
+        <a class="nav__brand" href="/"><img src="Images/logo.svg" alt="" /></a>
+
+        <svg class="icon icon--white nav__toggler">
+          <use xlink:href="Images/sprite.svg#menu"></use>
+        </svg>
+        <ul class="list nav__list collapsible__content">
+          <li class="nav__item"><a href="#">Hosting</a></li>
+          <li class="nav__item"><a href="#">VPS</a></li>
+          <li class="nav__item"><a href="#">Domain</a></li>
+          <li class="nav__item"><a href="#">Pricing</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+          <h1 class="block__heading">Cloud Hosting for Pros</h1>
+          <p class="hero_tagline">
+            Deploy you websites in less than 60 seconds.
+          </p>
+          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
+        </header>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/banner.webp 1x, Images/banner@2x.webp 2x" />
+          <source
+            type="image/png"
+            srcset="images/banner.png 1x, Images/banner@2x.png 2x" />
+          <img class="hero__image" src="Images/banner.png" alt=""
+        /></picture>
+      </div>
+    </section>
+    <section class="block container block-domain">
+      <header class="block__header">
+        <h2>Starting at $9 per month</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam,
+          autem?
+        </p>
+      </header>
+      <div class="input-group">
+        <input
+          type="text"
+          class="input"
+          placeholder="Enter domain name here..."
+        />
+        <button class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use xlink:href="Images/sprite.svg#search"></use>
+          </svg>
+          Search
+        </button>
+      </div>
+      <ul class="list block-domain__prices">
+        <li><span class="badge badge--secondary">.com $9</span></li>
+        <li>.sg $7.91</li>
+        <li>.space $12.98</li>
+        <li>.info $14.15</li>
+        <li>.net $16.15</li>
+        <li>.xyz $10.15</li>
+      </ul>
+    </section>
+    <section class="block container block-plans">
+      <div class="grid grid--1x3">
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$10</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--secondary badge-small">10% off</span>
+              <span class="plan__description">East start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 GB RAM</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy Now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="plan plan--popular">
+          <div class="card card--primary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$10</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--primary badge-small">10% off</span>
+              <span class="plan__description">East start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 GB RAM</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy Now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$10</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--secondary badge-small">10% off</span>
+              <span class="plan__description">East start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 GB RAM</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2>Host on the Cloud to keep Growing</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium,
+          autem!
+        </p>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="Images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+            repellendus deserunt qui corporis atque ratione recusandae quia
+            earum tempore obcaecati.
+          </p>
+          <a href="#" class="link-arrow">Learn more</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="Images/easy.webp 1x, Images/easy@2x.webp 2x" />
+          <source
+            type="image/jpg"
+            srcset="Images/easy.jpg 1x, Images/easy@2x.jpg 2x" />
+          <img class="feature__image" src="Images/easy@2x.jpg" alt=""
+        /></picture>
+      </article>
+
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="Images/sprite.svg#computer"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Simply fast websites</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+            repellendus deserunt qui corporis atque ratione recusandae quia
+            earum tempore obcaecati.
+          </p>
+          <a href="" class="link-arrow">Learn more</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="Images/fast.webp 1x, Images/fast@2x.webp 2x" />
+          <source
+            type="image/jpg"
+            srcset="Images/fast.jpg 1x, Images/fast@2x.jpg 2x" />
+          <img class="feature__image" src="Images/fast@2x.jpg" alt=""
+        /></picture>
+      </article>
+
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="Images/sprite.svg#wordpress"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Wordpress made easy</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+            repellendus deserunt qui corporis atque ratione recusandae quia
+            earum tempore obcaecati.
+          </p>
+          <a href="" class="link-arrow">Learn more</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="Images/wordpress.webp 1x, Images/wordpress@2x.webp 2x" />
+          <source
+            type="image/jpg"
+            srcset="Images/wordpress.jpg 1x, Images/wordpress@2x.jpg 2x" />
+          <img class="feature__image" src=" Images/wordpress@2x.jpg" alt=""
+        /></picture>
+      </article>
+
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="Images/sprite.svg#clock"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">24/7 Expert Support</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+            repellendus deserunt qui corporis atque ratione recusandae quia
+            earum tempore obcaecati.
+          </p>
+          <a href="" class="link-arrow">Learn more</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="Images/support.webp 1x, Images/support@2x.webp 2x" />
+          <source
+            type="image/jpg"
+            srcset="Images/support.jpg 1x, Images/support@2x.jpg 2x" />
+          <img class="feature__image" src=" Images/support@2x.jpg" alt=""
+        /></picture>
+      </article>
+    </section>
+    <section class="block block--dark block--skewed-right block-showcase">
+      <header class="block__header">
+        <h2>User-friendly Control Panel</h2>
+      </header>
+      <div class="container grid grid--1x2">
+        <picture class="block-showcase__image">
+          <source
+            type="image/webp"
+            srcset="Images/ipad.webp 1x, Images/ipad@2x.webp 2x" />
+          <source
+            type="image/png"
+            srcset="Images/ipad.png 1x, Images/ipad@2x.png 2x" />
+
+          <img src="Images/ipad.png" alt=""
+        /></picture>
+        <ul class="list">
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="Images/sprite.svg#snap"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                  quae quaerat possimus autem quasi quibusdam debitis provident
+                  magni dignissimos at.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="Images/sprite.svg#growth"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Staging,Git & WP-CLI</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                  quae quaerat possimus autem quasi quibusdam debitis provident
+                  magni dignissimos at.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="Images/sprite.svg#wordpress"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Dynamic Caching & More</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                  quae quaerat possimus autem quasi quibusdam debitis provident
+                  magni dignissimos at.
+                </p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="block">
+      <header class="block__header">
+        <h2>What our Customers are Saying</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+          repellat?
+        </p>
+      </header>
+      <div class="container">
+        <div class="card testimonial">
+          <div class="grid grid--1x2">
+            <div class="testimonial__image">
+              <img
+                src="images/testimonial.jpg"
+                alt="A happy, smiling customer"
+              />
+              <span class="icon-container icon-container--accent">
+                <svg class="icon icon--white icon--small">
+                  <use xlink:href="images/sprite.svg#quotes"></use>
+                </svg>
+              </span>
+            </div>
+            <blockquote class="quote">
+              <p class="quote__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Incidunt optio officiis dolore earum error eaque perferendis
+                laudantium sed praesentium dolorum.
+              </p>
+              <footer>
+                <div class="media">
+                  <div class="media__image">
+                    <svg class="icon icon--primary quote__line">
+                      <use xlink:href="images/sprite.svg#line"></use>
+                    </svg>
+                  </div>
+                  <div class="media__body">
+                    <h3 class="media__title quote__author">John Smith</h3>
+                    <p class="quote__organization">ABC Company</p>
+                  </div>
+                </div>
+              </footer>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__section">
+          <header class="collapsible__header footer__heading">
+            <h2 class="collapsible__heading">Products</h2>
+            <span class="icon icon--white collapsible__chevron">
+              <img src="Images/chevron.svg" alt="" />
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">WebSite Hosting</a></li>
+              <li><a href="#">Free Automated Wordpress</a></li>
+              <li><a href="#">Migrations</a></li>
+              <li><a href="#">Domain Names</a></li>
+              <li><a href="#">Monthly Web Hosting</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header footer__heading">
+            <h2 class="collapsible__heading">Company</h2>
+            <span class="icon icon--white collapsible__chevron">
+              <img src="Images/chevron.svg" alt="" />
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#"></a>About</li>
+              <li><a href="#"></a>Affiliates</li>
+              <li><a href="#"></a>Blog</li>
+              <li><a href="#"></a>Careers</li>
+              <li><a href="#"></a>Community</li>
+              <li><a href="#"></a>News</li>
+              <li><a href="#"></a>Green Hosting</li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header footer__heading">
+            <h2 class="collapsible__heading">Support</h2>
+            <span class="icon icon--white collapsible__chevron">
+              <img src="Images/chevron.svg" alt="" />
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#"></a>Contact</li>
+              <li><a href="#"></a>Knowledge Base</li>
+              <li><a href="#"></a>Forums</li>
+              <li><a href="#"></a>System Status</li>
+              <li><a href="#"></a>Web Hosting</li>
+              <li><a href="#"></a>DreamCompute</li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header footer__heading">
+            <h2 class="collapsible__heading">Domains</h2>
+            <span class="icon icon--white collapsible__chevron">
+              <img src="Images/chevron.svg" alt="" />
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#"></a>Domain Checker</li>
+              <li><a href="#"></a>Domain Transfer</li>
+              <li><a href="#"></a>Free Domain</li>
+              <li><a href="#"></a>XYZ Domain</li>
+              <li><a href="#"></a>Web Hosting</li>
+              <li><a href="#"></a>Cheap SSL</li>
+            </ul>
+          </div>
+        </section>
+        <section class="footer__brand">
+          <img src="Images/logo.svg" alt="" />
+          <p class="footer__copyright">Copyright 2025 Pramod Dhimal</p>
+        </section>
+      </div>
+    </footer>
+
     <script src="js/main.js"></script>
   </body>
 </html>
