--- a/index.html
+++ b/index.html
@@ -401,13 +401,13 @@
           </header>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#"></a>About</li>
-              <li><a href="#"></a>Affiliates</li>
-              <li><a href="#"></a>Blog</li>
-              <li><a href="#"></a>Careers</li>
-              <li><a href="#"></a>Community</li>
-              <li><a href="#"></a>News</li>
-              <li><a href="#"></a>Green Hosting</li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Affiliates</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Community</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Green Hosting</a></li>
             </ul>
           </div>
         </section>
@@ -420,12 +420,12 @@
           </header>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#"></a>Contact</li>
-              <li><a href="#"></a>Knowledge Base</li>
-              <li><a href="#"></a>Forums</li>
-              <li><a href="#"></a>System Status</li>
-              <li><a href="#"></a>Web Hosting</li>
-              <li><a href="#"></a>DreamCompute</li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Knowledge Base</a></li>
+              <li><a href="#">Forums</a></li>
+              <li><a href="#">System Status</a></li>
+              <li><a href="#">Web Hosting</a></li>
+              <li><a href="#">DreamCompute</a></li>
             </ul>
           </div>
         </section>
@@ -438,12 +438,12 @@
           </header>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#"></a>Domain Checker</li>
-              <li><a href="#"></a>Domain Transfer</li>
-              <li><a href="#"></a>Free Domain</li>
-              <li><a href="#"></a>XYZ Domain</li>
-              <li><a href="#"></a>Web Hosting</li>
-              <li><a href="#"></a>Cheap SSL</li>
+              <li><a href="#">Domain Checker</a></li>
+              <li><a href="#">Domain Transfer</a></li>
+              <li><a href="#">Free Domain</a></li>
+              <li><a href="#">XYZ Domain</a></li>
+              <li><a href="#">Web Hosting</a></li>
+              <li><a href="#">Cheap SSL</a></li>
             </ul>
           </div>
         </section>
