--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     </div>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="Js/main.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
