--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="CSS/normalize.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 </head>
 <body>
@@ -45,8 +45,8 @@
         <a href="" class="btn btn--accent btn--stretched">Get Started</a>
       </header>
       <picture data-aos="zoom-in-up">
-        <source type="image/webp" srcset="images/banner.webp 1x, Images/banner@2x.webp 2x">
-        <source type="image/png" srcset="images/banner.png 1x, Images/banner@2x.png 2x">
+        <source type="image/webp" srcset="Images/banner.webp 1x, Images/banner@2x.webp 2x">
+        <source type="image/png" srcset="Images/banner.png 1x, Images/banner@2x.png 2x">
         <img class="hero__image" src="Images/banner.png" alt="">
       </picture>
     </div>
@@ -317,10 +317,10 @@
       <div class="card testimonial">
         <div class="grid grid--1x2">
           <div class="testimonial__image">
-            <img src="images/testimonial.jpg" alt="A happy, smiling customer">
+            <img src="Images/testimonial.jpg" alt="A happy, smiling customer">
             <span class="icon-container icon-container--accent">
               <svg class="icon icon--white icon--small">
-                <use href="images/sprite.svg#quotes"></use>
+                <use href="Images/sprite.svg#quotes"></use>
               </svg>
             </span>
           </div>
@@ -334,7 +334,7 @@
               <div class="media">
                 <div class="media__image">
                   <svg class="icon icon--primary quote__line">
-                    <use href="images/sprite.svg#line"></use>
+                    <use href="Images/sprite.svg#line"></use>
                   </svg>
                 </div>
                 <div class="media__body">
