--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:description" content="Promify...">
   <meta property="og:type" content="website">
   <meta property="og:image" content="http://">
-  <meta property="og:url" content="https://promify.com">
+  <meta property="og:url" content="https://pramoddhimal.com.np">
   <title>Promify - Go Online for Just $9</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
